// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picking Tab Navigator Renders the Pick TabNavigator 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    Object {
      "tabPress": [Function],
    }
  }
  screenOptions={
    Object {
      "swipeEnabled": true,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": Object {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.QUICKPICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.PICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.ITEM.SALES_FLOOR_QTY\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with "swipeEnabled: false" if multi Bin/Pick is enabled 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    Object {
      "tabPress": [Function],
    }
  }
  screenOptions={
    Object {
      "swipeEnabled": false,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": Object {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.QUICKPICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.PICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.ITEM.SALES_FLOOR_QTY\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with Active Picks 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    Object {
      "tabPress": [Function],
    }
  }
  screenOptions={
    Object {
      "swipeEnabled": true,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": Object {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.QUICKPICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      Object {
        "tabBarBadge": [Function],
        "title": "[missing \\"en.PICKING.PICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.ITEM.SALES_FLOOR_QTY\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;
